objects/Product_Development_Requirements_History__c.object
<CustomObject>
    <fields>
        <fullName>Development_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Development Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Development Requirements History</relationshipLabel>
        <relationshipName>Product_Development_Requirements_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Development_Requirements__c</fullName>
        <label>Product Development Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Development Requirements History</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Product Development Requirements History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Development Requirements History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>